--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.19",
     "mammoth": "^1.9.0",
     "mongoose": "^8.10.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "officeparser": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
