--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Created by https://www.toptal.com/developers/gitignore/api/node
+# Edit at https://www.toptal.com/developers/gitignore?templates=node
 
 ### Node ###
 # Logs
@@ -138,5 +140,16 @@ dist
 
 # SvelteKit build / generate output
 .svelte-kit
+# Editor directories and files
+
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # End of https://www.toptal.com/developers/gitignore/api/node
