--- a/backend/express-backend/package.json
+++ b/backend/express-backend/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@langchain/core": "^0.3.40",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -8,12 +7,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.3.19",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
-    "pdf2json": "^3.1.5",
-    "pptx-text-parser": "^1.1.1"
+    "node-fetch": "^3.3.2"
+    
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
